--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,13 @@
-astroid==2.4.2
-autopep8==1.5.4
-certifi==2020.11.8
-chardet==3.0.4
+certifi==2020.12.5
+chardet==4.0.0
 cognitive-face==1.5.0
-colorama==0.4.4
+dlib==19.21.1
 et-xmlfile==1.0.1
 idna==2.10
-isort==5.6.4
 jdcal==1.4.1
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
 numpy==1.19.4
+opencv-python==4.4.0.46
 openpyxl==3.0.5
-pycodestyle==2.6.0
-pylint==2.6.0
-requests==2.25.0
-six==1.15.0
-toml==0.10.2
+peewee==3.14.0
+requests==2.25.1
 urllib3==1.26.2
-wrapt==1.12.1
